@@ -8,22 +8,16 @@ import org.springframework.http.MediaType;
 import org.springframework.web.bind.annotation.*;
 
 import javax.servlet.http.HttpServletRequest;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 
-@RestController
+@RestController               // == @Controller + @ResponseBody on every method
 @RequestMapping("/trackers/ajax")
 public class RightPanelController {
 
     @Autowired
     private TrackerItemManager trackerItemManager;
 
-    /**
-     * AJAX 获取当前 Item 的基本信息。
-     * POST /trackers/ajax/custom_item.spr?itemId=123
-     * 返回 JSON：{id, name, description, status}
-     */
     @PostMapping(
             value    = "/custom_item.spr",
             produces = MediaType.APPLICATION_JSON_VALUE
@@ -32,17 +26,17 @@ public class RightPanelController {
             HttpServletRequest request,
             @RequestParam("itemId") int itemId
     ) {
-        // —— 1. 从 Session 中取 currentUser ——
+        // 1) 必须从 session 拿到当前用户
         UserDto user = (UserDto) request.getSession(false).getAttribute("currentUser");
         if (user == null) {
-            return Collections.singletonMap("error", "Session 失效或未登录");
+            return Map.of("error", "Session 失效，请重新登录");
         }
-        // —— 2. 加载 TrackerItemDto ——
+        // 2) 载入 TrackerItem
         TrackerItemDto item = trackerItemManager.findById(user, itemId);
         if (item == null) {
-            return Collections.singletonMap("error", "未找到 ID=" + itemId);
+            return Map.of("error", "找不到 ID=" + itemId);
         }
-        // —— 3. 封装并返回 JSON ——
+        // 3) 封装并返回纯 JSON
         Map<String,Object> result = new HashMap<>();
         result.put("id",          item.getId());
         result.put("name",        item.getName());
